# flipper_auto_click

./: Cargo.toml  rust-toolchain.toml
src/: main.rs
